default/objects/NVMContactWorld__NvmRouting__c/NVMContactWorld__NvmRouting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>NvmRouting</label>
</CustomObject>