default/objects/NVMContactWorld__NvmRouting__c/fields/NVMContactWorld__Case_owner_routing_timeout_Logged_in__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Case_owner_routing_timeout_Logged_in__c</fullName>
    <description>Time in seconds that we will attempt to route a case to the case owner when they are logged in.</description>
    <inlineHelpText>Time in seconds that we will attempt to route a case to the case owner when they are logged in.</inlineHelpText>
    <label>Case owner routing timeout (Logged in)</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>