default/objects/NVMContactWorld__NvmRouting__c/fields/NVMContactWorld__Case_Status_to_set_on_Agent_release__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Case_Status_to_set_on_Agent_release__c</fullName>
    <inlineHelpText>This Case Status will be set when an Agent releases a Case.</inlineHelpText>
    <label>Case Status to set on Agent release</label>
    <length>255</length>
    <type>Text</type>
</CustomField>