default/objects/NVMContactWorld__NvmRouting__c/fields/NVMContactWorld__Case_Status_to_set_on_assign_to_Agent__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Case_Status_to_set_on_assign_to_Agent__c</fullName>
    <inlineHelpText>This Case Status will be set when a Case is assigned to an Agent.</inlineHelpText>
    <label>Case Status to set on assign to Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>