default/objects/NVMContactWorld__NvmRouting__c/fields/NVMContactWorld__Case_Statuses_to_Release__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Case_Statuses_to_Release__c</fullName>
    <inlineHelpText>Enter one Case Status per line for Statuses that should cause a Case to be released.</inlineHelpText>
    <label>Case Statuses to Release</label>
    <type>TextArea</type>
</CustomField>