default/objects/NVMContactWorld__NvmRouting__c/fields/NVMContactWorld__Case_Statuses_to_Route__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Case_Statuses_to_Route__c</fullName>
    <inlineHelpText>Enter one Case Status per line for Statuses that should cause a Case to be routed to an agent.</inlineHelpText>
    <label>Case Statuses to Route</label>
    <type>TextArea</type>
</CustomField>