default/objects/NVMContactWorld__NvmRouting__c/fields/NVMContactWorld__TryRouteNewCaseToCaseOwner__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__TryRouteNewCaseToCaseOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set, NewVoiceMedia will attempt to route new Cases to the Case owner. This does not affect updating cases, where NewVoiceMedia will always attempt to route to the Case owner.</description>
    <inlineHelpText>When set, NewVoiceMedia will attempt to route new Cases to the Case owner. This does not affect updating cases, where NewVoiceMedia will always attempt to route to the Case owner.</inlineHelpText>
    <label>TryRouteNewCaseToCaseOwner</label>
    <type>Checkbox</type>
</CustomField>